# fri_autonomous_template

./: dump_beliefs.txt  dump_detect.txt  dump_detect_stat.txt  dump_status.txt  readme.md
bayes_scavenger/: README.md  package.xml  setup.cfg  setup.py
bayes_scavenger/bayes_scavenger/: __init__.py  bayes_engine.py  bayes_search_node.py  evaluation.py  experiment.py  object_detector_node.py  search_config.py  search_policy.py  simulation.py  yolo_detector_node.py
bayes_scavenger/config/: search_config.yaml
bayes_scavenger/launch/: bayes_scavenger.launch.py
bayes_scavenger/tests/: test_bayes_engine.py  test_search_policy.py
follower_robot/src/: FollowerRobotNode.cpp  MoveToTarget.cpp
spatial_utils/src/: transform_util.cpp
